--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.button {
+.buttonpink {
   background-color: #e100ff;
   border: none;
   color: white;
@@ -17,7 +17,7 @@
 .button5 {border-radius: 50%;}
 
 
-.notbutton {
+.buttongreen {
   background-color: #04AA6D;
   border: none;
   color: white;
@@ -28,9 +28,3 @@
   font-size: 16px;
   margin: 4px 2px;
 }
-
-.notbutton1 {border-radius: 2px;}
-.notbutton2 {border-radius: 4px;}
-.notbutton3 {border-radius: 8px;}
-.notbutton4 {border-radius: 12px;}
-.notbutton5 {border-radius: 50%;}
